--- a/src/Assets/scss/landingPage.scss
+++ b/src/Assets/scss/landingPage.scss
@@ -28,17 +28,30 @@
             align-items: flex-start;
             justify-content: space-between;
            
-            padding:60px 0px 60px 60px;  
+            
+            @include xxxl-width{
+            
+                padding:60px 0px 60px 60px;  
+            }
+            @include xxl-width{
+                
+                padding:60px 0px 60px 60px;  
+            }
+       
+            @include xl-width{
+                padding:30px 0px 30px 30px;  
+            }
             font-family: 'Playfair Display', serif;
                 .detail{
                     h1{
                         
-                        font-size: 70px;
+                        // font-size: 70px;
                         margin:0px;
                        letter-spacing: 5px;
                     }
-                    p{
-                        font-size: 30px;
+                    // p{
+                    h4{
+                        // font-size: 30px;
                         margin:10px 0px;
                     }
                 }      
@@ -48,18 +61,25 @@
                 }         
                 .welcome{
                     h1{
-                        font-size: 70px;
+                        // font-size: 70px;
                         margin:10px 0px;
                         letter-spacing: 5px;
                     }
-                    p{
-                        font-size: 30px;
+                    h4{
+                        // font-size: 30px;
                         margin:10px 0px;
                     }
                 }  
-                .basicBtn{
+                .basicBtn, .basicBtn_reverse{
                     display: inline-block;
                     margin-top: 10px;
+                }
+                .btn-group{
+                    display: flex;
+                    flex-direction: row;
+                    a{
+                        margin-right: 15px;
+                    }
                 }
         }
     }
@@ -125,9 +145,9 @@
        
         
         .me{
-            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+            // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
             height:99%;
-           
+            margin-top:0.5%;
 
         }
         .name{
@@ -285,7 +305,7 @@
             display: inline-block;
             width: 100%;
             box-sizing: border-box;
-            padding:100px 50px 50px 50px;
+            padding:60px 50px 50px 50px;
             border:2px solid #000;
             margin-bottom: 60px;
            
@@ -294,6 +314,7 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
+                color:rgb(151, 150, 150);
             }
             .aca-image{
                
